welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: value !== is not a member of Int
while (nbB * 2 !== eSO + 1)
               ^