welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {

var nbB = 0 
var eSO = 0 
while (nbB * 2 !== eSO + 1)
	{avance(); if (estSurBiscuit())
				{nbB = nbB + 1;}
			if (estSurOrange())
				{eSO = eSO + 1}
	}	
}